Added category headers to the GNOME Add-on packages Table-of-Contents. Many thanks to Manuel for the XML wizardry to make this happen
git-svn-id: svn://svn.linuxfromscratch.org/BLFS/trunk/BOOK@5224 af4574ff-66df-0310-9fd7-8a98e5e911e0

--- a/stylesheets/blfs.css
+++ b/stylesheets/blfs.css
@@ -124,6 +124,14 @@ div.toc ul li h3, div.toc ul li h4 {
   margin: .4em;
 }
 
+.dummy {
+  font-weight: bold;
+  font-size: 110%; 
+  line-height: 1.8em;
+/* Removed per Bruce
+  margin-left: -1.5em; */
+}
+
 .item {
     width: 18.5em;
     float: left;
