Updated template.xml with automatized scripts generation  related tags.
git-svn-id: svn://svn.linuxfromscratch.org/BLFS/trunk/BOOK@5328 af4574ff-66df-0310-9fd7-8a98e5e911e0

--- a/template/template.xml
+++ b/template/template.xml
@@ -23,6 +23,13 @@
   <sect1info>
     <othername>$LastChangedBy$</othername>
     <date>$Date$</date>
+    <keywordset>
+      <!-- The actual package name but without .bz2 or .gz extension -->
+      <keyword role="package">TEMPLATE-&TEMPLATE-version;.tar</keyword>
+      <!-- The subdir under BLFS/conglomeration/ in where the package
+      is stored on the FTP mirrors -->
+      <keyword role="ftptdir">TEMPLATE</keyword>
+    </keywordset>
   </sect1info>
 
   <!-- No other tags inside any title-->
@@ -82,16 +89,16 @@
     <bridgehead renderas="sect3">TEMPLATE Dependencies</bridgehead>
 
     <bridgehead renderas="sect4">Required</bridgehead>
-    <para><xref linkend="BLFS DEPENDENCY"/></para>
+    <para role="required"><xref linkend="BLFS DEPENDENCY"/></para>
 
     <!-- As required -->
     <bridgehead renderas="sect4">Recommended</bridgehead>
-    <para><ulink url="http://www.some.url/">EXTERNAL DEPENDENCY</ulink>,
+    <para role="recommended"><ulink url="http://www.some.url/">EXTERNAL DEPENDENCY</ulink>,
     <xref linkend="BLFS DEPENDENCY"/></para>
 
     <!-- As required -->
     <bridgehead renderas="sect4">Optional</bridgehead>
-    <para><ulink url="http://www.some.url/">EXTERNAL DEPENDENCY</ulink></para>
+    <para role="optional"><ulink url="http://www.some.url/">EXTERNAL DEPENDENCY</ulink></para>
 
   </sect2>
 
