--- a/template/template.xml
+++ b/template/template.xml
@@ -28,7 +28,7 @@
       <keyword role="package">TEMPLATE-&TEMPLATE-version;.tar</keyword>
       <!-- The subdir under BLFS/conglomeration/ in where the package
       is stored on the FTP mirrors -->
-      <keyword role="ftptdir">TEMPLATE</keyword>
+      <keyword role="ftpdir">TEMPLATE</keyword>
     </keywordset>
   </sect1info>
 
