Standardized the id tag name of the Bootscripts package
git-svn-id: svn://svn.linuxfromscratch.org/BLFS/trunk/BOOK@5497 af4574ff-66df-0310-9fd7-8a98e5e911e0

--- a/template/template.xml
+++ b/template/template.xml
@@ -209,7 +209,7 @@ EOF</userinput></screen>
       when the system is rebooted, install the
       <filename>/etc/rc.d/init.d/TEMPLATE</filename>
       bootscript from the
-      <xref linkend="intro-important-bootscripts"/> package.</para>
+      <xref linkend="bootscripts"/> package.</para>
 
       <indexterm zone="TEMPLATE TEMPLATE-init">
         <primary sortas="f-TEMPLATE">TEMPLATE</primary>
