--- a/stylesheets/blfs.css
+++ b/stylesheets/blfs.css
@@ -436,3 +436,9 @@ p.updated {
 tt.systemitem {
   font-style: italic;
 }
+
+p.usernotes {
+  font-size: small;
+  font-weight: bold;
+  font-style: italic;    
+}
